# trnsystor

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  make.bat  mkdocs.yml  profile_trnsystor.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  release-drafter.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  main.yml  on-release-main.yml  publish.yml  python-package.yml  python-publish.yml
Tests/: test_xml.py
Tests/input_files/: Type146.xml
docs/: conf.py  index.md  index.rst  reference.md  reference.rst
docs/_static/: Thumbs.db
docs/_templates/: autosummary.rst
docs/reference/: pyTrnsysType.trnsymodel.MetaData.rst  pyTrnsysType.trnsymodel.TrnsysModel.rst  pyTrnsysType.trnsymodel.TypeVariable.rst
pyTrnsysType/: __init__.py  anchor_point.py  anchorpoint.py  canvas.py  component.py  controlcards.py  deck.py  external_file.py  externalfile.py  input_file.py  link_style.py  linkstyle.py  name.py  specialcard.py  statements.py  studio.py  trnsymodel.py  trnsysmodel.py  type_class.py  typecycle.py  typevariable.py  utils.py
pyTrnsysType/collections/: __init__.py  components.py  constant.py  cycle.py  derivatives.py  equation.py  externalfile.py  initialinputvalues.py  input.py  output.py  parameter.py  specialcards.py  variable.py
pyTrnsysType/statement/: __init__.py  constant.py  dfq.py  end.py  eqsolver.py  equation.py  limites.py  list.py  map.py  nancheck.py  nocheck.py  nolist.py  overwritecheck.py  simulation.py  solver.py  statement.py  timereport.py  tolerances.py  version.py  width.py
pytrnsys/: __init__.py  anchorpoint.py  canvas.py  component.py  controlcards.py  deck.py  externalfile.py  linkstyle.py  name.py  run.py  specialcard.py  studio.py  trnsysmodel.py  typecycle.py  typevariable.py  utils.py
pytrnsys/collections/: __init__.py  components.py  constant.py  cycle.py  derivatives.py  equation.py  externalfile.py  initialinputvalues.py  input.py  output.py  parameter.py  specialcards.py  variable.py
pytrnsys/statement/: __init__.py  constant.py  dfq.py  end.py  eqsolver.py  equation.py  limites.py  list.py  map.py  nancheck.py  nocheck.py  nolist.py  overwritecheck.py  simulation.py  solver.py  statement.py  timereport.py  tolerances.py  version.py  width.py
scripts/: close-stale-prs.sh
src/trnsystor/: __init__.py  component.py  context.py  controlcards.py  externalfile.py  quantity.py  specialcard.py  studio.py  trnsysmodel.py  typevariable.py  utils.py
src/trnsystor/collections/: __init__.py  components.py  cycle.py  initialinputvalues.py  input.py  parameter.py  variable.py
src/trnsystor/parsing/: lexer.py  tokens.py
src/trnsystor/serialization/: studio.py  variables.py
src/trnsystor/statement/: __init__.py  end.py  eqsolver.py  equation.py  map.py  solver.py  statement.py  tolerances.py  version.py  width.py
test/: test_xml.py
tests/: conftest.py  test_anchorpoint.py  test_canvas.py  test_controlcards_order.py  test_deck_parser.py  test_parsing.py  test_thread_safety.py  test_typevariable_predecessor.py  test_utils.py  test_xml.py
tests/input_files/: Case600h10.dck  TYPE24.xml  Type106.xml  Type107-simplified.xml  Type114.tmf  Type114.xml  Type11f.xml  Type11h.xml  Type14h.xml  Type15-2.xml  Type15-3.xml  Type15-6.xml  Type158.xml  Type165.xml  Type1b.xml  Type25c.xml  Type2b.xml  Type2d.xml  Type39.xml  Type41c.xml  Type46a.xml  Type47a.xml  Type48b.xml  Type4a.xml  Type50d.xml  Type647.xml  Type65c.xml  Type65d.xml  Type951.xml  Type9c.xml  test_deck.dck
tests/input_files/tpfs/: Type951.dck  Type951.tpf
trnsystor/: __init__.py  anchorpoint.py  canvas.py  component.py  context.py  controlcards.py  deck.py  externalfile.py  linkstyle.py  name.py  run.py  simulation.py  specialcard.py  studio.py  trnsysmodel.py  typecycle.py  typevariable.py  utils.py
trnsystor/collections/: __init__.py  components.py  constant.py  cycle.py  derivatives.py  equation.py  externalfile.py  initialinputvalues.py  input.py  output.py  parameter.py  specialcards.py  variable.py
trnsystor/parsing/: __init__.py  lexer.py  parser.py  resolver.py  tokens.py
trnsystor/serialization/: __init__.py  components.py  linkstyles.py  statements.py  variables.py  writer.py
trnsystor/statement/: __init__.py  constant.py  dfq.py  end.py  eqsolver.py  equation.py  limites.py  list.py  map.py  nancheck.py  nocheck.py  nolist.py  overwritecheck.py  simulation.py  solver.py  statement.py  timereport.py  tolerances.py  version.py  width.py
