[build-system]
requires = ["uv", "setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "trnsystor"
dynamic = ["version"]
description = "A python TRNSYS type parser"
readme = "README.md"
authors = [{ name = "Samuel Letellier-Duchesne", email = "samuel.letellier-duchesne@polymtl.ca" }]
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4",
    "lxml",
    "matplotlib",
    "numpy",
    "outdated",
    "pandas",
    "path",
    "pint",
    "shapely",
    "sympy",
    "tabulate",
    "networkx",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov",
    "mock",
]
docs = [
    "sphinx>=7",
    "recommonmark",
    "sphinx_rtd_theme",
]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "pytest>=8",
    "pytest-cov",
    "sphinx>=7",
    "recommonmark",
    "sphinx_rtd_theme",
]

[tool.setuptools_scm]

[tool.setuptools.package-data]
trnsystor = ["py.typed"]

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "ruff",
    "mypy",
    "pytest>=8",
    "pytest-cov",
    "mock",
    "sphinx>=7",
    "recommonmark",
    "sphinx_rtd_theme",
]

[tool.mypy]
strict = true
warn_return_any = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_redundant_casts = true
warn_unused_ignores = true
extra_checks = true
exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "--cov=trnsystor --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
