[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trnsystor"
version = "0.0.0"
description = "A python TRNSYS type parser"
readme = "README.md"
authors = [{ name = "Samuel Letellier-Duchesne", email = "samuel.letellier-duchesne@polymtl.ca" }]
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beautifulsoup4",
    "lxml",
    "matplotlib",
    "numpy",
    "pandas",
    "pint",
    "shapely",
    "sympy",
    "tabulate",
    "networkx",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov",
]
docs = [
    "sphinx>=7",
    "myst-parser",
    "sphinx_rtd_theme",
]

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "ruff",
    "pyright",
    "pytest>=8",
    "pytest-cov",
    "sphinx>=7",
    "myst-parser",
    "sphinx_rtd_theme",
]

[tool.hatch.build.targets.wheel]
packages = ["trnsystor"]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "PIE",  # flake8-pie
    "C4",   # flake8-comprehensions
    "PERF", # perflint
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["trnsystor"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "PT011", "PT012"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
exclude = ["tests", "docs"]

[tool.coverage.run]
omit = ["tests/*", "docs/*"]

[tool.coverage.report]
fail_under = 90

[tool.pytest.ini_options]
addopts = "--cov=trnsystor --cov-report=term-missing --import-mode=importlib"
testpaths = ["tests"]
