[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trnsystor"
version = "1.4.1"
description = "A python TRNSYS type parser"
readme = "README.md"
authors = [{ name = "Samuel Letellier-Duchesne", email = "samuel.letellier-duchesne@polymtl.ca" }]
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beautifulsoup4",
    "lxml",
    "shapely",
    "tabulate",
    "networkx",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pre-commit",
    "ruff",
    "pyright",
    "matplotlib",
    "pytest>=8",
    "pytest-cov",
    "zensical>=0.0.17",
    "mkdocstrings[python]",
]


[project.optional-dependencies]
symbolic = [
    "sympy",
]
viz = [
    "matplotlib",
]
test = [
    "matplotlib",
    "pytest>=8",
    "pytest-cov",
]
docs = [
    "zensical>=0.0.17",
    "mkdocstrings[python]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trnsystor"]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "PIE",  # flake8-pie
    "C4",   # flake8-comprehensions
    "PERF", # perflint
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["trnsystor"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "PT011", "PT012"]
"src/trnsystor/parsing/resolver.py" = ["PERF203"]  # try/except in loops needed for per-iteration debug logging

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
pythonPlatform = "All"
exclude = ["tests", "docs"]

[tool.deptry]
ignore = ["DEP003"]
per_rule_ignores = { "DEP002" = ["lxml"] }
optional_dependencies_dev_groups = ["test", "docs"]

[tool.coverage.run]
omit = ["tests/*", "docs/*"]

[tool.coverage.report]
fail_under = 90

[tool.pytest.ini_options]
addopts = "--cov=src/trnsystor --cov-report=term-missing --import-mode=importlib"
testpaths = ["tests"]
